updated variable names
